Change default message

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			}
 		});
 
-		$("#message").innerText = document.location.hash || "Lorem ipsum";
+		$("#message").innerText = document.location.hash || "Create a 'share with Mastodon' link on your website using Tootpick! https://tootpick.org/ #mastodon #tootpick";
 	});
 </script>
 
