--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 	main {
 		display: flex;
 		flex-direction: column;
-		gap: 1em;
+		gap: .8em;
 		background: #444b5d;
 		border-radius: 0;
-		padding: 10px;
+		padding: .8em;
 		max-width: 40rem;
 		margin-top: auto;
 		margin-bottom: auto;
