--- a/index.html
+++ b/index.html
@@ -282,6 +282,11 @@
 			// domain is expected, but user might enter URL
 			let instance = $("#instance").value.trim();
 
+			if (instance == '') {
+				error('Enter the domain name of your Mastodon server.');
+				return;
+			}
+
 			// remove trailing slash and username, if present
 			instance = instance.replace(/\/+(?:@.*)?$/, "");
 
