--- a/index.html
+++ b/index.html
@@ -367,6 +367,6 @@
 </main>
 <footer>
 	<a href="https://github.com/Juerd/tootpick">Tootpick</a> is a
-	privacy preserving instance picker for sharing links from
+	privacy-preserving instance picker for sharing links from
 	news sites, blogs, etc.<br>(Free software under the AGPLv3 license.)
 </footer>
