Different example texts

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 			let [k, v] = arg.split('=');
 			args[ decodeURIComponent(k) ] = decodeURIComponent(v);
 		}
-		message = args['text'] || "Create a 'share with Mastodon' link on your website using Tootpick! https://tootpick.org/ #mastodon #tootpick";
+		message = args['text'] || "If you want a 'share with Mastodon' link on your website, have a look at Tootpick. https://tootpick.org/ #mastodon #tootpick";
 
 		$("#message").innerText = message;
 	}
