--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		align-items: center;
 		background: #191b22;
 		background-size: cover;
+		background-position: 50% 50%;
 		line-height: 120%;
 		color: white;
 		font-family: sans-serif;
