--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 		display: flex;
 		flex-direction: column;
 		gap: .5em;
+		align-items: center;
 		padding-top: .5em;
 		position: relative;
 		margin-top: 1em;
