clearStatus on pageshow to accommodate for history.back

--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
 	window.addEventListener('pageshow', () => {
 		setLocationGlobals();
 		populateRecent();
+		clearStatus();
 
 		$("#instance").addEventListener('keydown', clearStatus);
 		$("#instance").addEventListener('click', clearStatus);
