--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name=viewport content="width=device-width, initial-scale=1">
 <meta http-equiv=Content-Security-Policy content="default-src 'self' 'unsafe-inline' https:; connect-src https:; img-src  https:">
 <meta http-equiv=Referrer-Policy content=no-referrer>
-<link rel=icon href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 -14 16 16'><text>🔁</text></svg>">
+<link rel=icon href="data:image/svg+xml,&lt;svg xmlns='http://www.w3.org/2000/svg' viewBox='0 -14 16 16'&gt;&lt;text&gt;🔁&lt;/text&gt;&lt;/svg&gt;">
 <style>
 	* {
 		box-sizing: border-box;
