Use <meta name=referrer> instead of http-equiv

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <meta charset=UTF-8>
 <title>Tootpick</title>
 <meta name=viewport content="width=device-width, initial-scale=1">
+<meta name=referrer content=no-referrer>
 <meta http-equiv=Content-Security-Policy content="default-src 'self' 'unsafe-inline' https:; connect-src https:; img-src  https:">
-<meta http-equiv=Referrer-Policy content=no-referrer>
 <link rel=icon href="data:image/svg+xml,&lt;svg xmlns='http://www.w3.org/2000/svg' viewBox='0 -14 16 16'&gt;&lt;text&gt;🔁&lt;/text&gt;&lt;/svg&gt;">
 <style>
 	* {
