Alert via status line
title="" is too hidden, especially for touch screen users

--- a/index.html
+++ b/index.html
@@ -317,6 +317,10 @@
 		$("#instance").addEventListener('keydown', clearStatus);
 		$("#instance").addEventListener('click', clearStatus);
 
+		$("#message").addEventListener('click', () => {
+			status($("#message").getAttribute('title'))
+		});
+
 		$("form").addEventListener('submit', (e) => {
 			e.preventDefault();
 
