--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ GNU Affero General Public License for more details.
 		font-family: sans-serif;
 		font-size: 15px;
 	}
-	form * {
+	main * {
 		font: inherit;
 		border: 0;
 		border-radius: 4px;
