--- a/index.html
+++ b/index.html
@@ -452,7 +452,6 @@ GNU Affero General Public License for more details.
 	<a href="https://github.com/Juerd/tootpick">Tootpick</a> is a
 	privacy-preserving instance picker for sharing links from
 	news sites, blogs, etc.<br>
-	Free software under the AGPLv3 license &bull;
 	<details data-nosnippet>
 		<summary>Legal notices</summary>
 		<h4>License</h4>
@@ -470,7 +469,7 @@ GNU Affero General Public License for more details.
 		Tootpick does not collect or store any of your data except on your own
 		computer. The server that hosts Tootpick, and the Mastodon servers you
 		enter, will probably store your IP address and User-Agent (browser)
-		identification in a log file.
+		identification in a web server log file.
 	</details>
 </footer>
 
