--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@ GNU Affero General Public License for more details.
 		border: 1px solid #aaa;
 		padding: .5em;
 		max-width: 40em;
+		margin: auto;
 	}
 	h4 {
 		margin: .5em;
