Prevent double firing of events after history.back()
Wasn't a problem yet, because everything is idempotent as far as the
user experience is concerned. But adding event handlers that are already
in place isn't right and could cause issues with future features.

--- a/index.html
+++ b/index.html
@@ -370,7 +370,9 @@ GNU Affero General Public License for more details.
 		clearStatus();
 		for (let timer of timers) clearTimeout(timer);
 		timers = [];
+	});
 
+	window.addEventListener('DOMContentLoaded', () => {
 		$("#instance").addEventListener('keydown', clearStatus);
 		$("#instance").addEventListener('click', clearStatus);
 
