--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ GNU Affero General Public License for more details.
 	}
 
 	function getRecent() {
-		try { return JSON.parse(localStorage.getItem('recent')); }
+		try { return JSON.parse(localStorage.getItem('recent')) || []; }
 		catch (e) { return []; }
 	}
 
