Preserve unencoded = in value
For consistency with RFC 3986:

"If a reserved character is found in a URI component and no delimiting
role is known for that character, then it must be interpreted as
representing the data octet corresponding to that character's encoding
in US-ASCII."

Although "=" is not a reserved character in a fragment per se, we are
using it as such. Tootpick follows section 5.1 of
https://www.w3.org/TR/media-frags/ (except GIGO instead of dropping
invalid data, and without support for repeated names)

--- a/index.html
+++ b/index.html
@@ -244,7 +244,9 @@ GNU Affero General Public License for more details.
 		let hash = document.location.hash.replace(/^#/, '');
 		let args = {};
 		for (let arg of hash.split('&')) {
-			let [k, v] = arg.split('=');
+			let i = arg.indexOf('=');  // .split() can't preserve a second "="
+			let k = arg.substr(0, i);
+			let v = arg.substr(i + 1);
 			args[ decodeURIComponent(k) ] = decodeURIComponent(v);
 		}
 		message = args['text'] || "If you want a 'share with Mastodon' link on your website, have a look at Tootpick. https://tootpick.org/ #mastodon #tootpick";
