Deduplicate using a Set instead of an Object
Suggested by ChatGPT with the prompt "improve this function".

It took 4 attempts to get it to suggest something that makes any sense,
but eventually, it did come through.

--- a/index.html
+++ b/index.html
@@ -262,10 +262,10 @@ GNU Affero General Public License for more details.
 
 	function setRecent(obj) {
 		// Deduplicate
-		let seen = {};
+		let seen = new Set();
 		obj = obj.filter(x => {
 			let key = x['domain'];
-			return seen[key] ? false : (seen[key] = true);
+			return seen.has(key) ? false : seen.add(key);
 		});
 
 		// The box will show 2, 3, or 4 per row, limit of 12 ensures
